# RLMath

./: .gitignore  ADVANCED_MCTS_INTEGRATION.md  FINAL_COMPLETION_SUMMARY.md  INTEGRATION_COMPLETE.md  MCTS_INTEGRATION_COMPLETE.md  PRIORITY_INTEGRATION_SUMMARY.md  README.md  REPOSITORY_CLEAN_COMPLETE.md  TASK_COMPLETION_SUMMARY.md  UNIFIED_SYSTEM_COMPLETE.md  colab_blank.ipynb  colab_example.ipynb  config.toml  demo_advanced_mcts.py  demo_integrated_priority.py  demo_mcts_integration.py  demo_priority_integration.py  demo_priority_mcts.py  install_requirements.py  isosceles_triangle.ipynb  luoning_migration_guide.py  luoning_modernized_mcts.ipynb  mcts_integration_demo.py  mcts_priority_colab_example.ipynb  priority__base.py  priority_sb3_integration.py  pyproject.toml  quick_test_advanced_mcts.py  test_env_patternboost.py  test_mcts_factory.py  test_mcts_functionality.py  test_mcts_integration.py  test_model.py  test_priority_mcts.py  train_model.py  unified_mcts_demo.ipynb
models/: NoStrictIsoscelesEnv_cnn.pt  NoStrictIsoscelesEnv_ffnn_4x4.pt  NoStrictIsoscelesEnv_vit.pt
notebooks/: Flammenkamp_implementation.ipynb  HJSW_improv.ipynb
nothreeinline-Spring-25/: 01_1_no3inlineClass.ipynb  02_03_01_Pure_MCTS_Numba_Sqare_C2.ipynb  02_03_Pure_MCTS_Numba_test.ipynb  02_04_01_pre_compute_V1.ipynb  02_04_pre_compute_collinear_triples.ipynb  02_05_01_N3IL_MCGS_Tree_Reuse.ipynb  02_05_02_N3IL_MCGS_Graph_Search.ipynb  02_1_N3IL_MCTS.ipynb  02_2_01_N3IL_MCTS_for_comparison_with_evalutation_func.ipynb  02_2_02_01_N3IL_MCTS_cProfile.ipynb  02_2_N3IL_MCTS.ipynb  7.AlphaTweaks.ipynb  (+18 more)
(+155 files in other folders)
