[project]
name = "rlmath"
version = "0.1.0"
description = ""
authors = [
    {name = "tianhaoW",email = "wth961209@126.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "gymnasium (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "notebook (>=7.4.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
