[project]
name = "rlmath"
version = "0.1.0"
description = ""
authors = [
    {name = "tianhaoW",email = "wth961209@126.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "gymnasium (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "stable-baselines3 (>=2.6.0,<3.0.0)",
    "numba (>=0.61.2,<0.62.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "sympy (>=1.14.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.4.3"

